@@ -1,3 +1,9 @@
+*postfwd2-1.35-r1 (09 Oct 2014)
+
+  09 Oct 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +postfwd2-1.35-r1.ebuild, -postfwd2-1.35.ebuild:
+  net-misc/postfwd2: depend on perl-core virtuals
+
 *postfwd2-1.35 (17 Mar 2014)
 
   17 Mar 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
